New - Componente Depoimentos , Pagina de contato remodelada

--- a/src/scss/layouts/_common.scss
+++ b/src/scss/layouts/_common.scss
@@ -67,6 +67,7 @@ iframe {
 .staticHero {
   @media only screen and (max-width: 767px) {
     height: 130px;
+    margin-bottom: 15rem;
   }
 
   .v-image {
